Fix: AddCity controls not showing

--- a/src/components/AddModal/style.module.css
+++ b/src/components/AddModal/style.module.css
@@ -44,7 +44,10 @@
 }
 
 .Control {
-  margin-top: auto;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
 }
 
 .Order {
@@ -77,5 +80,10 @@
     min-height: 400px;
     max-width: 700px;
     border-radius: var(--border-radius-5);
+  }
+
+  .Control {
+    margin-top: auto;
+    position: static;
   }
 }
